fix page home signin signout

--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -1,4 +1,5 @@
-<div class="page" data-name="about">
+<template>
+<div class="page page-about">
   <div class="navbar">
     <div class="navbar-bg"></div>
     <div class="navbar-inner sliding">
@@ -13,16 +14,209 @@
   </div>
   <div class="page-content">
     <div class="block-title">Bienvenue sur MATOUA</div>
-    <div class="block">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni molestiae laudantium dignissimos est nobis
-        delectus nemo ea alias voluptatum architecto, amet similique, saepe iste consectetur in repellat ut minus
-        quibusdam!</p>
-      <p>Molestias et distinctio porro nesciunt ratione similique, magni doloribus, rerum nobis, aliquam quae reiciendis
-        quasi modi. Nam a recusandae, fugiat in ea voluptates fuga eius, velit corrupti reprehenderit dignissimos
-        consequatur!</p>
-      <p>Blanditiis, cumque quo adipisci. Molestiae, dolores dolorum quos doloremque ipsa ullam eligendi commodi
-        deserunt doloribus inventore magni? Ea mollitia veniam nostrum nihil, iusto doloribus a at! Ea molestiae ullam
-        delectus!</p>
-    </div>
+    <div class="block block-image"></div>
+        <div class="card">
+          <div class="card-content">
+            <div class="list media-list no-safe-areas">
+              <ul>
+                <li class="item-content">
+                  <div class="item-media">
+                    <img
+                      src="assets/img/undraw_savings_re_eq4w.svg"
+                      width="44"
+                    />
+                  </div>
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">
+                        Vos trajets préférés à petits prix
+                      </div>
+                    </div>
+                    <div class="item-subtitle">
+                      Où que vous alliez, en bus ou en covoiturage, trouvez le
+                      trajet idéal parmi notre large choix de destinations à
+                      petits prix.
+                    </div>
+                  </div>
+                </li>
+                <li class="item-content">
+                  <div class="item-media">
+                    <img
+                      src="assets/img/undraw_verified_re_4io7.svg"
+                      width="44"
+                    />
+                  </div>
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">Voyagez en toute confiance</div>
+                    </div>
+                    <div class="item-subtitle">
+                      Nous prenons le temps qu’il faut pour connaître nos
+                      membres et nos compagnies de bus partenaires. Nous
+                      vérifions les avis, les profils et les pièces d’identité.
+                      Vous savez donc avec qui vous allez voyager pour réserver
+                      en toute confiance sur notre plateforme sécurisée.
+                    </div>
+                  </div>
+                </li>
+                <li class="item-content">
+                  <div class="item-media">
+                    <img
+                      src="assets/img/undraw_mobile_search_jxq5.svg"
+                      width="44"
+                    />
+                  </div>
+                  <div class="item-inner">
+                    <div class="item-title-row">
+                      <div class="item-title">
+                        Recherchez, cliquez et réservez !
+                      </div>
+                    </div>
+                    <div class="item-subtitle">
+                      Réserver un trajet devient encore plus simple ! Facile
+                      d'utilisation et dotée de technologies avancées, notre
+                      appli vous permet de réserver un trajet à proximité en un
+                      rien de temps.
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+		<div
+          class="bg-green list list-strong list-outline-ios list-dividers-ios inset-md accordion-list"
+        >
+          <h1 class="text-center searchbar-found">
+            Comment fonctionne MATOUA ?
+          </h1>
+          <ul>
+            <li class="accordion-item">
+              <a class="item-link item-content">
+                <div class="item-inner">
+                  <div class="item-title">Pour commencer</div>
+                </div>
+              </a>
+              <div class="accordion-item-content">
+                <div class="block">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aenean elementum id neque nec commodo. Sed vel justo at
+                    turpis laoreet pellentesque quis sed lorem. Integer semper
+                    arcu nibh, non mollis arcu tempor vel. Sed pharetra tortor
+                    vitae est rhoncus, vel congue dui sollicitudin. Donec eu
+                    arcu dignissim felis viverra blandit suscipit eget ipsum.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordion-item">
+              <a class="item-link item-content">
+                <div class="item-inner">
+                  <div class="item-title">
+                    À propos des frais de service de covoiturage
+                  </div>
+                </div>
+              </a>
+              <div class="accordion-item-content">
+                <div class="block">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aenean elementum id neque nec commodo. Sed vel justo at
+                    turpis laoreet pellentesque quis sed lorem. Integer semper
+                    arcu nibh, non mollis arcu tempor vel. Sed pharetra tortor
+                    vitae est rhoncus, vel congue dui sollicitudin. Donec eu
+                    arcu dignissim felis viverra blandit suscipit eget ipsum.
+                  </p>
+                </div>
+              </div>
+            </li>
+            <li class="accordion-item">
+              <a class="item-link item-content">
+                <div class="item-inner">
+                  <div class="item-title">
+                    Comment fonctionne le covoiturage ?
+                  </div>
+                </div>
+              </a>
+              <div class="accordion-item-content">
+                <div class="block">
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Aenean elementum id neque nec commodo. Sed vel justo at
+                    turpis laoreet pellentesque quis sed lorem. Integer semper
+                    arcu nibh, non mollis arcu tempor vel. Sed pharetra tortor
+                    vitae est rhoncus, vel congue dui sollicitudin. Donec eu
+                    arcu dignissim felis viverra blandit suscipit eget ipsum.
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
   </div>
 </div>
+</template>
+<style>
+  .img-responsive {
+    margin: 0 auto;
+    display: block;
+    max-width: 200px;
+  }
+  .page-about .navbar-inner .link .icon {
+    color: var(
+      --f7-navbar-link-color,
+      var(--f7-bars-link-color, var(--f7-theme-color))
+    );
+  }
+  .page-about .navbar.navbar-large-collapsed .icon {
+    color: #ffffff !important;
+  }
+  .page-about .page-content {
+    padding-top: 80px;
+  }
+  .text-center {
+    text-align: center;
+  }
+
+  .page-about .title {
+    font-size: 30px !important;
+    font-weight: 600 !important;
+    color: black !important;
+  }
+  .page-about .navbar-large-collapsed .title {
+    color: #fff !important;
+  }
+  .page-about .navbar-large .title {
+    opacity: 1;
+  }
+  .page-about .title .green {
+    color: #0fc874;
+  }
+  .page-about .navbar-large-collapsed .title .green {
+    color: #044025;
+  }
+  .block.block-image {
+    background-image: url("assets/img/home-illustration.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 300px;
+    background-position: 50% 87%;
+  }
+  .list .item-subtitle {
+    white-space: normal;
+    text-align: justify;
+  }
+  .page-about .card {
+    box-shadow: none !important;
+  }
+</style>
+<script>
+  export default (props, { $f7, $on }) => {
+    $on("pageInit", (e, page) => {
+      $f7.dialog.close();
+    });
+    return $render;
+  };
+</script>
+
