--- a/www/pages/signin.html
+++ b/www/pages/signin.html
@@ -1,5 +1,16 @@
 <template>
-  <div class="page no-toolbar no-navbar no-swipeback login-screen-page">
+  <div class="page no-toolbar login-screen-page">
+    <div class="navbar">
+    <div class="navbar-inner sliding">
+      <div class="left">
+        <a href="#" class="link back">
+          <i class="icon icon-back"></i>
+          <span class="if-not-md">Back</span>
+        </a>
+      </div>
+      <div class="title">Connexion</div>
+    </div>
+  </div>
     <div class="page-content login-screen-content">
       <div class="login-screen-title">
         <img
@@ -13,11 +24,11 @@
           <ul>
             <li class="item-content item-input item-input-with-value">
               <div class="item-inner">
-                <div class="item-title item-label">E-mail</div>
+                <div class="item-title item-label">E-mail/Téléphone</div>
                 <div class="item-input-wrap">
                   <input
                     type="text"
-                    placeholder="Votre adresse mail"
+                    placeholder="Votre adresse mail ou téléphone"
                     id="username"
                     name="email"
                     class="input-with-value"
@@ -74,6 +85,10 @@
   .login-screen-page .page-content {
     padding-top: 10px;
   }
+  .login-screen-page .navbar-inner .title, .login-screen-page .navbar-inner .link .icon, .login-screen-page .title {
+    color: black;
+}
+
 </style>
 <script>
   export default (props, { $, $f7, $f7router }) => {
