--- a/platforms/browser/www/pages/signup.html
+++ b/platforms/browser/www/pages/signup.html
@@ -195,6 +195,7 @@
               })
                 .then((response) => {
                   if (!response.ok) {
+				  $f7.dialog.close();
                     throw new Error("Network response was not ok");
                     app.dialog.alert(
                       "Ooups! Une erreur s'est produite ressayez svp !"
